SONARIAC-1364 More syntax adaption to Java 17